# crow

./: README.md  test_snapshots.txt
doc/: manual.txt
examples/: counter.r  jedi12.r  ksnipper.r  rabbit.r  rook.r  sniper.r
src/: Makefile.am  compiler.c  crobots.h  library.c  library.h  main.c  motion.c  snapshot.c  snapshot.h  visualize.c
